--- a/swiftware/public/css/main.css
+++ b/swiftware/public/css/main.css
@@ -19,4 +19,13 @@ footer {
     font-size: 30px;
     align-items: center;
 }
+.d-flex {
+    display: flex;
+}
+.justify-content-center {
+    justify-content: center;
+}
 
+.align-items-center {
+    align-items: center;
+}
